# SqlReverse

./: CMakeLists.txt
libsqlreverse/: CMakeLists.txt  ListNodeInterface.h  PgListNode.cpp  PgListNode.h  reverse.cpp  reverse.h
pg/: pg_list.h
test/: CMakeLists.txt
test/sqlreversetests/: CMakeLists.txt  sqlreversetests.cpp
